code cleaning and fixes
-removed duplicate scripted effects/triggers
-commented out switching ideas for formables
-fixed some loc files
-monument fixes
-missing aspect desc
-anavatic namelist fix
-dagica and pelian hussar swap
-heir fixes

--- a/localisation/TD_01_flavour_yaltazim_l_english.yml
+++ b/localisation/TD_01_flavour_yaltazim_l_english.yml
@@ -1,13 +1,24 @@
 ﻿l_english:
  yaltazim_blessings: "Yaltazim Teachings"
  pick_yaltazim_blessing: "Pick a Teaching"
+
  be_righteous: "Be Righteous"
+ desc_be_righteous: "Just verdicts and lawful reign must be the founding stones of our faith."
  give_alms: "Give Alms"
+ desc_give_alms: "Helping the poor will make us stronger, not weaker."
  fight_infidels: "Fight the Infidels"
+ desc_fight_infidels: "To ensure safety of our people, we must always strive to defeat our enemies."
  help_pagans: "Help the Pagans"
+ desc_help_pagans: "Oversea pagans are yet to see the light of god and his prophets."
  support_the_churches: "Support the Churches"
+ desc_support_the_churches: "Local priests must be funded, as the churches are what binds us together."
  praise_the_creation: "Praise the Creation"
+ desc_praise_the_creation: "We must create exquisite artworks to commemorate and imitate the creation of God."
  spread_the_ideals: "Spread the Ideals"
+ desc_spread_the_ideals: "We must enlighten people of the new and innovative visions of the world."
  seek_compromise: "Seek Compromise"
+ desc_seek_compromise: "We must always seek to build something together, instead of altercating about details."
  learn_the_word: "Learn the Word"
+ desc_learn_the_word: "Everyone shall be able to read, to better understand the words of prophets."
  work_hard: "Work Hard"
+ desc_work_hard: "Relentless work will benefit not only a person, but also their community."
