Coimcehaer Prov names
i tried to degenerate them a bit so they aren't extremely long, but i still feel like they are too long.

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -910,7 +910,7 @@
  PROV909: "Meitiesa"
  PROV910: "Eastern Kahbi Sea"
  PROV911: "Musatemaran Sea"
- PROV912: "912"
+ PROV912: "Dugaaniboai"
  PROV913: "Castima"
  PROV914: "Zeretinne"
  PROV915: "Rinerone"
@@ -2533,7 +2533,7 @@
  PROV2532: "Bwiapala"
  PROV2533: "Jamoon"
  PROV2534: "Kaabkicha"
- PROV2535: "2535"
+ PROV2535: "Aingasogope"
  PROV2536: "Pumekwiy"
  PROV2537: "Kupilan"
  PROV2538: "Kosikaro"
@@ -2731,7 +2731,7 @@
  PROV2730: "Kapukor"
  PROV2731: "2731"
  PROV2732: "2732"
- PROV2733: "2733"
+ PROV2733: "Basakumbe"
  PROV2734: "Demidak"
  PROV2735: "Yyrtylit"
  PROV2736: "Ammag"
@@ -2810,7 +2810,7 @@
  PROV2809: "2809"
  PROV2810: "2810"
  PROV2811: "2811"
- PROV2812: "2812"
+ PROV2812: "Duchtepana"
  PROV2813: "2813"
  PROV2814: "2814"
  PROV2815: "2815"
@@ -2845,35 +2845,35 @@
  PROV2844: "Yu'ri"
  PROV2845: "Yaqinyemi"
  PROV2846: "Hatuah"
- PROV2847: "2847"
- PROV2848: "2848"
- PROV2849: "2849"
+ PROV2847: "Ohadooyas"
+ PROV2848: "Ohadooyas"
+ PROV2849: "Ohadooyas"
  PROV2850: "Hamapall"
  PROV2851: "2851"
- PROV2852: "2852"
- PROV2853: "2853"
- PROV2854: "2854"
+ PROV2852: "Bakwaitena"
+ PROV2853: "Beaigahnin"
+ PROV2854: "Biaidowope"
  PROV2855: "Cheepumay"
- PROV2856: "2856"
- PROV2857: "2857"
+ PROV2856: "Duhuboai"
+ PROV2857: "Beaiokaipin"
  PROV2858: "Hannahat"
- PROV2859: "2859"
- PROV2860: "2860"
+ PROV2859: "Gebedabasiwa"
+ PROV2860: "Biawaibasiwa"
  PROV2861: "2861"
  PROV2862: "2862"
- PROV2863: "2863"
- PROV2864: "2864"
- PROV2865: "2865"
+ PROV2863: "Gotoodooya"
+ PROV2864: "Dosadooya"
+ PROV2865: "Setepana" 
  PROV2866: "2866"
  PROV2867: "2867"
- PROV2868: "2868"
+ PROV2868: "Ohaboai"
  PROV2869: "2869"
  PROV2870: "2870"
- PROV2871: "2871"
+ PROV2871: "Egeokaipin"
  PROV2872: "Chepahawenu"
- PROV2873: "2873"
- PROV2874: "2874"
- PROV2875: "2875"
+ PROV2873: "Dunaanboai"
+ PROV2874: "Gaipaa"
+ PROV2875: "Gaiokaipin"
  PROV2876: "2876"
  PROV2877: "2877"
  PROV2878: "Tukveha"
@@ -2895,14 +2895,14 @@
  PROV2894: "2894"
  PROV2895: "2895"
  PROV2896: "2896"
- PROV2897: "2897"
- PROV2898: "2898"
+ PROV2897: "Segutusipe"
+ PROV2898: "Waingekuna"
  PROV2899: "2899"
- PROV2900: "2900"
+ PROV2900: "Sohukumbe"
  PROV2901: "2901"
- PROV2902: "2902"
- PROV2903: "2903"
- PROV2904: "2904"
+ PROV2902: "Gwiipkuna"
+ PROV2903: "Biaidembi"
+ PROV2904: "Gizhapiapa"
  PROV2905: "Oketa"
  PROV2906: "2906"
  PROV2907: "2907"
